--- a/index.html
+++ b/index.html
@@ -172,11 +172,15 @@ see node agent behaviour kicking int
 
 ---
 class: center, middle
+##Only 5 connections open at any one time!!
+
+---
+class: center, middle
 ##Whats happening?
 
 ---
 class: center, middle
-##Only 5 connections open at any one time!!
+##NodeJs Global Agent
 ###(http://nodejs.org/api/http.html#http_class_http_agent)
 
 ---
@@ -219,7 +223,6 @@ see better throughput
 * Establishing TCP connections takes time
 * Keep-Alive has it's purpose, don't abuse it!
 * These aren't Node specific, applicable for any language
-
 
     </textarea>
     <script src="remark-0.6.5.min.js" type="text/javascript"></script>
